k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-js-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-js
  template:
    metadata:
      labels:
        app: node-js
    spec:
      containers:
      - name: node-js-container
        image: muralikrishnakamidi/node-js-sample:1.0
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: node-js-service
spec:
  type: NodePort
  selector:
    app: node-js
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30007
